2004-01-30  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	Migration to gnome cvs
	fix build after the import
	* Makefile.am:
	* configure.in:
	* src/monkey/monkey-marshal.list:

2004-01-20  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

        new bubble animation
	Hurry up message
	* pixmaps/Makefile.am:
	* pixmaps/hurry_up.svg:
	* pixmaps/left_monkey.svg:
	* pixmaps/monkeys.svg:
	* pixmaps/right_monkey.svg:
	* src/monkey/.cvsignore:
	* src/monkey/board.c: (board_get_cell):
	* src/monkey/monkey.c: (monkey_class_init),
	(monkey_new_level_from_file), (monkey_shoot), (monkey_update),
	(monkey_bubble_sticked):
	* src/monkey/monkey.h:
	* src/view/monkey-view.c: (monkey_view_shooter_shoot), (hurry_up),
	(monkey_view_new), (monkey_view_update), (animate_waiting_bubble),
	(monkey_view_shooter_bubble_added), (monkey_view_draw_lost),
	(monkey_view_draw_win):

2004-01-19  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	final correctin i hope
	* data/Makefile.am:

2004-01-19  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	makefile correction ..
	for distcheck
	* data/Makefile.am:
	* src/audio/Makefile.am:
	* src/net/Makefile.am:
	* src/ui/Makefile.am:
	* src/view/Makefile.am:

2004-01-19  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	0.1.9 release
	* configure.in:

2004-01-19  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

        This patch prevents monkey-bubble from stomping
	on memory it doesn'town.# Adam
	
	* src/audio/sound-manager.c: (start_play):
	* src/monkey/bubble.c: (bubble_collide_bubble):

	Make control keys first in the list
	* src/ui/keyboard-properties.c:

2004-01-16  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	new background for 2 player game
	* pixmaps/layout_2_players.svg:

2004-01-16  Laurent Belmonte  <laurent.belmonte@aliacom.fr>

	new bubbles with symbol inside
	* pixmaps/bubbles/bubble_01.svg:
	* pixmaps/bubbles/bubble_02.svg:
	* pixmaps/bubbles/bubble_03.svg:
	* pixmaps/bubbles/bubble_04.svg:
	* pixmaps/bubbles/bubble_05.svg: