@@ -106,7 +106,7 @@ AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE",[The package name, for gettext])
 
 dnl Please keep this in alphabetical order
-ALL_LINGUAS="de es eu fr"
+ALL_LINGUAS="de es eu fr sv"
 
 AM_GLIB_GNU_GETTEXT
 
