@@ -1,8 +1,15 @@
+*.gmo
+*.mo
+*.pot
 .intltool-merge-cache
 Makefile
 Makefile.in
 Makefile.in.in
 POTFILES
-messages.mo
-monkey-bubble.pot
-*.gmo
+cat-id-tbl.c
+messages
+missing
+notexist
+po2tbl.sed
+po2tbl.sed.in
+stamp-cat-id
