@@ -1,3 +1,7 @@
+2004-02-02  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "sv" to ALL_LINGUAS.
+
 2004-01-30  Laurent Belmonte  <laurent.belmonte@aliacom.fr>
 
 	Migration to gnome cvs
